# beacon

./: .gitignore  README.md  main.py  pyproject.toml
beacon/: __init__.py  __main__.py  _paths.py  cli.py  constants.py  icn_by_location.py  keys.py  paths.py  pipeline.py  processing.py  reports.py  verify_mtf.py  verity_coverage.py  verity_matches.py
beacon/processing/: __init__.py  chains.py  enrichment.py  loaders.py  writers.py
beacon/reports/: __init__.py  _common.py  analytics.py  chains.py  duplicates.py  verity_coverage.py  verity_matches.py
tests/: test_duplicates.py  test_processing.py  test_verity_coverage.py
